k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlops-lab
  labels:
    name: mlops-lab
    environment: development
